tests/NormalTests/paczka2/big_fuzzy/31468830.err
Error in line 21: T5IbGxyp6N A984 25,4
Error in line 16: jPZJNn7utv A493 6,2
Error in line 26: jPZJNn7utv A984 23,1
Error in line 18: AlU1 A887 212,3
Error in line 25: T5IbGxyp6N A493 272,5
Error in line 37: T5IbGxyp6N A984 78,1
Error in line 38: T5IbGxyp6N A493 53,2
Error in line 33: sDeSv7U A887 109,5
Error in line 57: jPZJNn7utv A887 166,9
Error in line 59: LwmVTU94n S276 94,7
Error in line 61: LwmVTU94n A887 -5,6
Error in line 58: jPZJNn7utv S276 57,9
Error in line 60: LwmVTU94n A887 88,2
Error in line 69: LwmVTU94n A887 95,5
Error in line 62: jPZJNn7utv A493 11,3
Error in line 83: wnSi A984 47,4
Error in line 95: jPZJNn7utv A984 44,6
Error in line 97: LwmVTU94n S276 47,5
Error in line 101: T5IbGxyp6N A493 47,0
Error in line 96: wnSi A493 39,1
Error in line 108: wnSi S276 42,8
Error in line 98: jPZJNn7utv A493 35,2
Error in line 121: AlU1 A493 81,3
Error in line 124: wnSi A887 32,3
Error in line 129: jPZJNn7utv S276 90,7
Error in line 117: sDeSv7U A887 96,8
Error in line 132: jPZJNn7utv A493 13,7
Error in line 123: AlU1 S276 1,3
Error in line 146: T5IbGxyp6N A887 237,8
Error in line 150: wnSi A984 474,7
Error in line 156: AlU1 A493 40,9
Error in line 158: T5IbGxyp6N A493 5,9
Error in line 159: wnSi A493 83,0
Error in line 140: sDeSv7U S276 367,0
Error in line 166: sDeSv7U A887 25,6
Error in line 177: wnSi A984 26,1
Error in line 185: AlU1 A4d3 6d,5
Error in line 187: LwmVTU94n A984 228,3
Error in line 181: sDeSv7U A984 65,2
Error in line 191: AlU1 A493 321,8
Error in line 189: LwmVTU94n A493 96,4
Error in line 198: T5IbGxyp6N A887 9,8
Error in line 204: T5IbGxyp6N A493 39,7
Error in line 180: wnSi S276 9,9
Error in line 197: LwmVTU94n S276 30,1
Error in line 229: LwmVTU94n A493 55,5
Error in line 214: T5IbGxyp6N S276 66,7
Error in line 240: T5IbGxyp6N A493 30,3
Error in line 228: wnSi A493 307,6
Error in line 241: T5IbGxyp6N S276 83,8
Error in line 239: A984 A493 40,9
